--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,6 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
 include( glfw )
 
 add_executable( hello hello.cpp )
-target_link_libraries( hello ${GLFW_LIBRARIES} glad )
+target_link_libraries( hello glad ${GLFW_LIBRARIES})
 target_include_directories( hello PUBLIC ${GLFW_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/glad/include )
 add_dependencies( hello glfw glad )
