split c and cpp files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,22 +12,22 @@ set(GLAD_INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/external/glad/include")
 set(CG2019ICMC_CPP_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/cpp_src)
 add_subdirectory(cpp_src)
 
-# set(CG2019ICMC_C_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/c_src)
-# add_subdirectory(c_src)
+set(CG2019ICMC_C_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/c_src)
+add_subdirectory(c_src)
 
 ##################################################################
 # EXECUTAVEIS
 
 # Versao procedural
-add_executable( test1 hello.cpp )
-target_link_libraries( test1 glad ${GLFW_LIBRARIES})
-target_include_directories( test1 PUBLIC 
+add_executable( projeto1C projeto_1.c )
+target_link_libraries( projeto1C glad ${GLFW_LIBRARIES} cg2019c)
+target_include_directories( projeto1C PUBLIC 
                             ${CG2019ICMC_C_INCLUDE_DIR}
                             ${GLFW_INCLUDE_DIR} ${GLAD_INCLUDES} )
 
 # Versao orientado a objetos
-add_executable( test2 hello_oo.cpp )
-target_link_libraries( test2 glad ${GLFW_LIBRARIES} cg2019cpp )
-target_include_directories( test2 PUBLIC 
+add_executable( projeto1CPP projeto_1.cpp )
+target_link_libraries( projeto1CPP glad ${GLFW_LIBRARIES} cg2019cpp )
+target_include_directories( projeto1CPP PUBLIC 
                             ${CG2019ICMC_CPP_INCLUDE_DIR}
                             ${GLFW_INCLUDE_DIR} ${GLAD_INCLUDES} )
