--- a/cpp_src/CMakeLists.txt
+++ b/cpp_src/CMakeLists.txt
@@ -11,7 +11,7 @@ target_link_libraries(cg2019cpp PUBLIC ${GLFW_LIBRARIES} glad)
 set_target_properties(cg2019cpp PROPERTIES
         OUTPUT_NAME "cg2019cpp"
         FOLDER "CG2019cpp")
-target_include_directories(cg2019cpp PUBLIC ${CG2019ICMC_SOURCE_DIR}/cpp_src)
+target_include_directories(cg2019cpp PUBLIC ${CG2019ICMC_SOURCE_DIR}/cpp_src ${GLM_INCLUDE_DIRS})
 
 set(CG2019ICMC_CPP_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
 # add_library(glad STATIC "${GLAD_DIR}/glad.c")
