Added a simple obj loader

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,3 +55,9 @@ target_link_libraries( texture glad ${GLFW_LIBRARIES} cg2019cpp )
 target_include_directories( texture PUBLIC 
                             ${CG2019ICMC_CPP_INCLUDE_DIR}
                             ${GLFW_INCLUDE_DIR} ${GLAD_INCLUDES} )
+                        
+add_executable( loader loader.cpp )
+target_link_libraries( loader glad ${GLFW_LIBRARIES} cg2019cpp )
+target_include_directories( loader PUBLIC 
+                            ${CG2019ICMC_CPP_INCLUDE_DIR}
+                            ${GLFW_INCLUDE_DIR} ${GLAD_INCLUDES} )
