--- a/cpp_src/CMakeLists.txt
+++ b/cpp_src/CMakeLists.txt
@@ -1,8 +1,10 @@
 file(GLOB HEADERS 
         ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
         )
+
 file(GLOB SOURCES 
         ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/*.cc
         )
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
